...
    var body: some View {
        Text("Reviews")
            .font(.system(size: 32).bold())
            .padding(.vertical)
            .fontWeight(.semibold)
            .frame(maxWidth: .infinity, alignment: .leading)
            .accessibilityIdentifier("citiesReviewsTitle")
    }
}

private struct CitySearchView: View {
    @ObservedObject var viewModel: CitiesReviewsViewModel
    @Binding var searchTapped: Bool
...
